PLAT-105501: Fix BodyText wrap and font-weight (#248)
* fixed nowrap and changed font weight

* added noWrap css

* Updated changelog to include the noWrap fix

* Update variables.less


Integrated-By: Ryan Duffy (ryan.duffy@lge.com)

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -98,7 +98,7 @@
 // Body
 @sand-body-font-family: @sand-font-family;
 @sand-body-font-style: normal;
-@sand-body-font-weight: 300;
+@sand-body-font-weight: 400;
 @sand-body-line-height: @sand-body-font-size + 6;
 @sand-non-latin-body-font-weight: @sand-non-latin-font-weight-light;
 @sand-non-latin-body-font-style: @sand-body-font-style;
